<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_prod" translatable="false">Silentium</string>
    <string name="app_name_dev" translatable="false">Silentium Dev</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_input">Input</string>
    <string name="menu_dialogs">Dialogs</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_description">Description</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_messages">Messages</string>


    <string name="description_title_view">Morse Code</string>
    <string name="description_code_description">Morse code is a method used in telecommunication to encode text characters as standardized sequences of two different signal durations, called dots and dashes, or dits and dahs. Morse code is named after Samuel Morse, one of the inventors of the telegraph.\n%1$s encoding is currently active (reference: %2$s).\nFollowing characters are available:</string>
    <string name="description_time_description">The length of dahs and spaces is defined in milliseconds as follows:</string>
    <string name="description_time_view">DAH length: %1$d ms\nGAP between characters length: %2$d ms\nWHITESPACE length: %3$d ms\nEND OF MESSAGE length: %4$d ms</string>
    <string name="description_subscription"></string>


    <string name="silent_ime_name_prod" translatable="false">Silent Keyboard</string>
    <string name="silent_ime_name_dev" translatable="false">Silent Keyboard Dev</string>

    <string name="notification_channel_id" translatable="false">silentium_default_notification_channel</string>
</resources>
