<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_input"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_input" />
        <item
            android:id="@+id/nav_dialogs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dialogs" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>

    <item
        android:id="@+id/nav_version"
        android:enabled="false"
        android:title="@string/build_version" />
</menu>