<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DescriptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin" >

        <TextView
            android:id="@+id/title_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_title_view"
            android:gravity="center"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/code_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/code_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/description_code_description"
            app:layout_constraintTop_toBottomOf="@id/title_view"
            app:layout_constraintBottom_toTopOf="@id/code_view_col1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/code_view_col1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@id/time_description"
            app:layout_constraintEnd_toStartOf="@id/code_view_col2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/code_description" />

        <TextView
            android:id="@+id/code_view_col2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@id/time_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/code_view_col1"
            app:layout_constraintTop_toBottomOf="@id/code_description" />

        <TextView
            android:id="@+id/time_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_time_description"
            app:layout_constraintTop_toBottomOf="@id/code_view_col1"
            app:layout_constraintBottom_toTopOf="@id/time_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/time_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_time_view"
            android:typeface="monospace"
            app:layout_constraintTop_toBottomOf="@id/time_description"
            app:layout_constraintBottom_toTopOf="@id/subscription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subscription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_subscription"
            app:layout_constraintTop_toBottomOf="@id/time_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
